--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ backoff = ">=1.11.1,<3.0.0"
 SPARQLWrapper = { version = "^1.8.5", optional = true }
 pyodbc = { version = "~4.0.32", optional = true }
 oracledb = { version = "~1.0.0", optional = true }
+geopandas = {version = "^0.11.1", optional = true, python = ">=3.8,<3.11"}
 
 [tool.poetry.extras]
 sqlserver = ["pyodbc"]
